kubernetes/apps/monitoring/grafana/instance/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - kind: ListenerSet
      name: deangalvin-dev-listener-set
      namespace: networking
  hostnames:
    - grafana.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana-service
          port: 3000
